CRUDS y plantillas corregidas